--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <form class="d-flex">
         <div class="main-container ">
             <div class="carousel">
-                <div class="carousel-item active">
+                <!-- <div class="carousel-item active">
                     <img class="d-block w-100" src="img/01.webp" alt="First slide">
                     <div class="carousel-caption pb-5">
                         <h5>Marvel\'s Spiderman Miles Morale</h5>
                         <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
  
             <button type="button" class="next btn btn-outline-light"><i class="fa-solid fa-arrow-down"></i></button>
@@ -42,6 +42,6 @@
         </div>
     </form>
     
-    <!-- <script src="js/file.js"></script> -->
+    <script src="js/file.js"></script>
 </body>
 </html>
