--- a/index.html
+++ b/index.html
@@ -17,31 +17,37 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <form class="d-flex">
-        <div class="main-container ">
-            <div class="carousel">
-                <!-- <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/01.webp" alt="First slide">
-                    <div class="carousel-caption pb-5">
-                        <h5>Marvel\'s Spiderman Miles Morale</h5>
-                        <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
-                    </div>
-                </div> -->
+<body class="d-flex">
+    <div class="slider-container">
+        <div class="carousel">
+            <!-- <div class="carousel-item active">
+                <img class="slider-img w-100" src="img/01.webp" alt="First slide">
+                <div class="carousel-caption pb-5">
+                    <h5>Marvel\'s Spiderman Miles Morale</h5>
+                    <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+                </div>
             </div>
- 
-            <button type="button" class="next btn btn-outline-light"><i class="fa-solid fa-arrow-down"></i></button>
-            <button type="button" class="prev btn btn-outline-light"><i class="fa-solid fa-arrow-up"></i></i></button>
+
+            <div class="carousel-item active">
+                <img class="slider-img w-100" src="img/02.webp" alt="First slide">
+                <div class="carousel-caption pb-5">
+                    <h5>Ciao CiaoMiles Morale</h5>
+                    <p>CIAO CIAO of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+                </div>
+            </div> -->
         </div>
-        <div class="side-container">
-            <img src="img/01.webp" alt="">
-            <img src="img/01.webp" alt="">
-            <img src="img/01.webp" alt="">
-            <img src="img/01.webp" alt="">
-            <img src="img/01.webp" alt="">
-        </div>
-    </form>
-    
+
+        <button type="button" class="next btn btn-outline-light"><i class="fa-solid fa-arrow-down"></i></button>
+        <button type="button" class="prev btn btn-outline-light"><i class="fa-solid fa-arrow-up"></i></i></button>
+    </div>
+    <div class="side-container">
+        <!-- <img src="img/01.webp" alt="">
+        <img src="img/01.webp" alt="">
+        <img src="img/01.webp" alt="">
+        <img src="img/01.webp" alt="">
+        <img src="img/01.webp" alt=""> -->
+    </div>
+
     <script src="js/file.js"></script>
 </body>
 </html>
